@@ -1,1 +1,1 @@
-0.11.1
+0.11.2
