@@ -1,3 +1,4 @@
+2008-01-14   Version 0.11.2: corrected a problem in the threshold computation
 2008-01-13   Version 0.11.1: added swap to the performance output
 2008-01-13   Version 0.11.0: added --free to specify the path of 'free'
 2008-01-13   Version 0.10.0: added --swap to monitor swap space
